src/main/java/com/example/citronix/web/errors/DuplicateRecolteException.java
package com.example.citronix.web.errors;

public class DuplicateRecolteException extends RuntimeException{
    public DuplicateRecolteException(String message) {
        super(message);
    }

}
